# mji-agenda

./: Cargo.toml  README.md  handicrafts.toml
.github/workflows/: release.yml
src/: agenda.rs  handicrafts.toml  lib.rs  main.rs  types.rs
