[package]
name = "island-sanctuary-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
petgraph = "0.6"
