[package]
name = "mji-agenda"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5.9"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
petgraph = "0.6"
cached = "0.38"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
derive_more = "0.99"
